<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="12"
    android:useDefaultMargins="true"
    android:alignmentMode="alignBounds"
    android:columnOrderPreserved="false">

    <TextView
        android:text="@string/duration"
        android:layout_columnSpan="12"/>

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="3">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietHours"
            android:hint="@string/hours"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/unit_hour"
        android:layout_columnSpan="1"/>

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="3">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietMinutes"
            android:hint="@string/minutes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/unit_m"
        android:layout_columnSpan="1"/>

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="3">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietSeconds"
            android:hint="@string/seconds"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/unit_second"
        android:layout_columnSpan="1"/>

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="11">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietDistance"
            android:hint="@string/distance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/unit_m"
        android:layout_columnSpan="1"/>

</GridLayout>